force-app/main/default/objects/Equipment__c/fields/Arqueros__c.field-meta.xml
<CustomField>
    <fullName>Arqueros__c</fullName>
    <label>Arquero</label>
    <type>TextArea</type>
</CustomField>