force-app/main/default/objects/Equipment__c/fields/Defensores__c.field-meta.xml
<CustomField>
    <fullName>Defensores__c</fullName>
    <label>Defensores</label>
    <type>TextArea</type>
</CustomField>