force-app/main/default/objects/Equipment__c/fields/Delanteros__c.field-meta.xml
<CustomField>
    <fullName>Delanteros__c</fullName>
    <label>Delanteros</label>
    <type>TextArea</type>
</CustomField>