force-app/main/default/objects/Equipment__c/fields/Mediocampistas__c.field-meta.xml
<CustomField>
    <fullName>Mediocampistas__c</fullName>
    <label>Mediocampistas</label>
    <type>TextArea</type>
</CustomField>